--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FifaUltimateBravery">
-        <activity android:name=".StatisticsActivity"></activity>
-        <activity android:name=".ResultsActivity" />
-        <activity android:name=".MatchActivity" />
-        <activity android:name=".MenuActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Activities.StatisticsActivity"></activity>
+        <activity android:name=".Activities.ResultsActivity" />
+        <activity android:name=".Activities.MatchActivity" />
+        <activity android:name=".Activities.MenuActivity" />
+        <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
