Added spotify functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <data
+                    android:host="callback"
+                    android:scheme="spotifymusic"/>
+            </intent-filter>
         </activity>
     </application>
 
