--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fub.fifaultimatebravery">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FifaUltimateBravery">
+        <service
+            android:enabled="true"
+            android:name="com.fub.fifaultimatebravery.Spotify.ExitService"
+            android:exported="false"
+            android:stopWithTask="false" />
         <activity android:name=".Activities.StatisticsActivity"></activity>
         <activity android:name=".Activities.ResultsActivity" />
         <activity android:name=".Activities.MatchActivity" />
